--- a/src/scss/parts/_card-work.scss
+++ b/src/scss/parts/_card-work.scss
@@ -1,13 +1,19 @@
 .card-work {
   height: 100%;
+  transition: 0.4s ease;
+  &:hover {
+    transform: scale(1.025);
+  }
   & .card-image {
     position: relative;
     z-index: 1;
     width: 100%;
-    height: 100%;
-    aspect-ratio: 16/9;
+    aspect-ratio: 16 / 9;
     overflow: hidden;
     & > * {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       object-fit: cover;
