--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,5 @@
 // import css-framework
-@import "../../../claw/src/scss/app.scss";
+@import "./vendor/claw/app.scss";
 
 // vendor
 @import "../../node_modules/animate.css/animate.compat.css";
