--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -22,7 +22,8 @@
   backdrop-filter: var(--header-backdrop-filter);
   box-shadow: var(--header-box-shadow);
   overflow: hidden;
-  animation: show-in-bottom ease-in-out 0.6s forwards;
+  // animation: show-in-bottom ease-in-out 0.6s forwards;
+  transform: translate(0, 0);
   transition: all 0.6s ease-in-out;
   &-transparent {
     --header-backdrop-filter: blur(0);
@@ -73,6 +74,16 @@
     display: block;
     @media (min-width: 768px) {
       display: none;
+    }
+  }
+  &-scroll {
+    &-up {
+      z-index: 10;
+      transform: translate(0, 0);
+    }
+    &-down {
+      z-index: 10;
+      transform: translate(0, -100%);
     }
   }
 }
