--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -62,7 +62,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   cursor: none;
   & * {
-    cursor: none;
+    cursor: none !important;
   }
   &::before {
     content: "";
