--- a/src/scss/layouts/_mobile-menu.scss
+++ b/src/scss/layouts/_mobile-menu.scss
@@ -98,6 +98,10 @@
         }
     }
     &-navigation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         flex: 1;
         & .nav {
             --nav-gutter-x: 0.5rem;
