--- a/src/scss/components/_animation.scss
+++ b/src/scss/components/_animation.scss
@@ -70,3 +70,12 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes infiniteRotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
