--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,9 +1,8 @@
 :root {
   --header-height: 3.75rem;
-  --header-backdrop-filter: blur(0.5rem);
-  --header-background-color: var(--white-rgb);
-  --header-box-shadow: 0rem 0.0625rem 0.0469rem 0rem rgba(var(--white-rgb), 0.15) inset,
-    0rem -0.0625rem 0.0625rem 0rem rgba(var(--black-rgb), 0.15) inset;
+  --header-backdrop-filter: blur(0);
+  --header-background-color: transparent;
+  --header-box-shadow: none;
   --header-padding-y: 0.5rem;
   --header-padding-x: 0;
 }
@@ -25,15 +24,6 @@
   // animation: show-in-bottom ease-in-out 0.6s forwards;
   transform: translate(0, 0);
   transition: all 0.6s ease-in-out;
-  &-transparent {
-    --header-backdrop-filter: blur(0);
-  }
-  &-nobackground {
-    --header-background-color: transparent;
-  }
-  &-noshadow {
-    --header-box-shadow: none;
-  }
   &-inner {
     display: block;
     width: 100%;
@@ -69,6 +59,9 @@
       display: flex;
       justify-content: center;
     }
+    & .nav-item {
+      --nav-item-color: var(--black);
+    }
   }
   &-button {
     display: block;
@@ -85,5 +78,11 @@
       z-index: 10;
       transform: translate(0, -100%);
     }
+  }
+  &-colorized {
+    --header-backdrop-filter: blur(0.5rem);
+    --header-background-color: var(--white-rgb);
+    --header-box-shadow: 0rem 0.0625rem 0.0469rem 0rem rgba(var(--white-rgb), 0.15) inset,
+      0rem -0.0625rem 0.0625rem 0rem rgba(var(--black-rgb), 0.15) inset;
   }
 }
