--- a/src/scss/layouts/_nav.scss
+++ b/src/scss/layouts/_nav.scss
@@ -62,10 +62,12 @@
     color: var(--nav-item-color);
     opacity: 0.5;
     transition:
+      transform 0.6s ease,
       opacity 0.6s ease,
       color 0.6s ease;
     &:hover {
       opacity: 1;
+      transform: scale(1.125);
     }
     &.active {
       --nav-item-color: rgba(var(--nav-item-color), 1) !important;
