--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -36,21 +36,9 @@ body {
   z-index: 1;
   min-height: 100svh;
   min-height: 100vh;
-  font-feature-settings:
-    "clig" off,
-    "liga" off;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
@@ -70,26 +58,42 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
-    width: 100vw;
-    height: 100vh;
-    background-image: radial-gradient(closest-side, rgba(var(--primary-rgb), 1), rgba(var(--black-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--warning-rgb), 1), rgba(var(--cyan-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--cyan-rgb), 1), rgba(var(--black-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--purple-rgb), 1), rgba(var(--black-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--purple-rgb), 1), rgba(var(--primary-rgb), 0));
-    background-size:
-      130vmax 130vmax,
-      80vmax 80vmax,
-      90vmax 90vmax,
-      110vmax 110vmax,
-      90vmax 90vmax;
+    width: 100%;
+    height: 100%;
+    background-image: radial-gradient(
+        closest-side,
+        rgba(var(--primary-rgb), 1),
+        rgba(var(--black-rgb), 0)
+      ),
+      radial-gradient(
+        closest-side,
+        rgba(var(--warning-rgb), 1),
+        rgba(var(--cyan-rgb), 0)
+      ),
+      radial-gradient(
+        closest-side,
+        rgba(var(--cyan-rgb), 1),
+        rgba(var(--black-rgb), 0)
+      ),
+      radial-gradient(
+        closest-side,
+        rgba(var(--purple-rgb), 1),
+        rgba(var(--black-rgb), 0)
+      ),
+      radial-gradient(
+        closest-side,
+        rgba(var(--purple-rgb), 1),
+        rgba(var(--primary-rgb), 0)
+      );
+    background-size: 130vmax 130vmax, 80vmax 80vmax, 90vmax 90vmax,
+      110vmax 110vmax, 90vmax 90vmax;
     // background-position:
     //   -80vmax -80vmax,
     //   60vmax -30vmax,
     //   10vmax 10vmax,
     //   -30vmax -10vmax,
     //   50vmax 50vmax;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     animation: 10s movement linear infinite;
   }
   &::after {
@@ -148,9 +152,7 @@ html.lenis {
 .ls-blur-up-img {
   filter: blur(0.625rem);
   opacity: 1;
-  transition:
-    opacity 1000ms,
-    filter 1500ms;
+  transition: opacity 1000ms, filter 1500ms;
 }
 
 .ls-blur-up-img.ls-inview.ls-original-loaded {
