--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -4,12 +4,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: calc(
-    100vh - (var(--header-height) + (var(--header-padding-y) * 2))
-  );
-  min-height: calc(
-    100svh - (var(--header-height) + (var(--header-padding-y) * 2))
-  );
+  min-height: calc(100vh - (var(--header-height) + (var(--header-padding-y) * 2)));
+  min-height: calc(100svh - (var(--header-height) + (var(--header-padding-y) * 2)));
   & > * {
     display: flex;
     flex-direction: column;
@@ -73,11 +69,11 @@
     transform: translateX(-50%);
     pointer-events: none;
     user-select: none;
-    & > span {
-      animation-timing-function: ease-in-out;
-      animation-direction: alternate;
-      animation-iteration-count: infinite;
-    }
+    // & > span {
+    //   animation-timing-function: ease-in-out;
+    //   animation-direction: alternate;
+    //   animation-iteration-count: infinite;
+    // }
   }
 }
 
@@ -99,5 +95,11 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+  }
+  &-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 5rem;
   }
 }
