--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -37,21 +37,9 @@ body {
   z-index: 1;
   min-height: 100svh;
   min-height: 100vh;
-  font-feature-settings:
-    "clig" off,
-    "liga" off;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
@@ -73,17 +61,33 @@ body {
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-image: radial-gradient(closest-side, rgba(var(--primary-rgb), 1), rgba(var(--black-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--warning-rgb), 1), rgba(var(--cyan-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--cyan-rgb), 1), rgba(var(--black-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--purple-rgb), 1), rgba(var(--black-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--purple-rgb), 1), rgba(var(--primary-rgb), 0));
-    background-size:
-      130vmax 130vmax,
-      80vmax 80vmax,
-      90vmax 90vmax,
-      110vmax 110vmax,
-      90vmax 90vmax;
+    background-image: radial-gradient(
+        closest-side,
+        rgba(var(--primary-rgb), 1),
+        rgba(var(--black-rgb), 0)
+      ),
+      radial-gradient(
+        closest-side,
+        rgba(var(--red-rgb), 1),
+        rgba(var(--blue-rgb), 0)
+      ),
+      radial-gradient(
+        closest-side,
+        rgba(var(--blue-rgb), 1),
+        rgba(var(--black-rgb), 0)
+      ),
+      radial-gradient(
+        closest-side,
+        rgba(var(--purple-rgb), 1),
+        rgba(var(--black-rgb), 0)
+      ),
+      radial-gradient(
+        closest-side,
+        rgba(var(--purple-rgb), 1),
+        rgba(var(--primary-rgb), 0)
+      );
+    background-size: 130vmax 130vmax, 80vmax 80vmax, 90vmax 90vmax,
+      110vmax 110vmax, 90vmax 90vmax;
     // background-position:
     //   -80vmax -80vmax,
     //   60vmax -30vmax,
@@ -92,6 +96,7 @@ body {
     //   50vmax 50vmax;
     // background-attachment: fixed;
     animation: 10s movement linear infinite;
+    will-change: auto;
   }
   &::after {
     content: "";
@@ -140,7 +145,6 @@ html.lenis {
   height: 100%;
   display: block;
   object-position: top center;
-  /* only if you want to change the blur-up option from always to auto or want to use blur up effect without a lowsrc image. */
   font-family: "blur-up: auto", "object-fit: cover";
 
   object-fit: cover;
@@ -149,9 +153,7 @@ html.lenis {
 .ls-blur-up-img {
   filter: blur(0.625rem);
   opacity: 1;
-  transition:
-    opacity 1000ms,
-    filter 1500ms;
+  transition: opacity 1000ms, filter 1500ms;
 }
 
 .ls-blur-up-img.ls-inview.ls-original-loaded {
