--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -28,19 +28,33 @@
                 max-width: calc(48.375rem + 1.5rem);
             }
         }
+        & .modal-header {
+            padding: 0 var(#{$prefix}-modal-header-padding-x) var(#{$prefix}-modal-header-padding-y);
+        }
         & .modal-image {
             position: relative;
             z-index: 1;
             width: 100%;
             aspect-ratio: 16 / 9;
             overflow: hidden;
-            & > * {
+            & > img {
                 position: absolute;
                 top: 0;
                 left: 0;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+            }
+        }
+        & .swiper-gallery {
+            & .swiper-slide,
+            & swiper-slide {
+                width: 100% !important;
+                & > img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
         }
     }
