--- a/src/scss/parts/_card-work.scss
+++ b/src/scss/parts/_card-work.scss
@@ -4,13 +4,23 @@
   &:hover {
     transform: scale(1.025);
   }
+  &-tip {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: fit-content;
+    height: fit-content;
+    margin: 0.5rem;
+    transform: translate(0, 0);
+  }
   & .card-image {
     position: relative;
     z-index: 1;
     width: 100%;
     aspect-ratio: 16 / 9;
     overflow: hidden;
-    & > * {
+    & > img {
       position: absolute;
       top: 0;
       left: 0;
