--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,174 +24,134 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch;
-  overflow: auto;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    overflow: auto;
 }
 
 body {
-  position: relative;
-  z-index: 1;
-  min-height: 100svh;
-  min-height: 100vh;
-  font-feature-settings:
-    "clig" off,
-    "liga" off;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%;
-  color: rgba(var(--body-text-color), 1);
-  background-color: rgba(var(--body-bg-color), 1);
-  overflow-x: clip;
-  -webkit-text-rendering: optimizeLegibility;
-  -moz-text-rendering: optimizeLegibility;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  cursor: none;
-  & * {
-    cursor: none !important;
-  }
-  &::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background-image:
-      radial-gradient(closest-side, rgba(var(--primary-rgb), 1), rgba(var(--black-rgb), 0)),
-      // radial-gradient(
-      //   closest-side,
-      //   rgba(var(--red-rgb), 1),
-      //   rgba(var(--blue-rgb), 0)
-      // ),
-      // radial-gradient(
-      //   closest-side,
-      //   rgba(var(--blue-rgb), 1),
-      //   rgba(var(--black-rgb), 0)
-      // ),
-      radial-gradient(closest-side, rgba(var(--purple-rgb), 1), rgba(var(--black-rgb), 0)),
-      radial-gradient(closest-side, rgba(var(--purple-rgb), 1), rgba(var(--primary-rgb), 0));
-    background-size:
-      130vmax 130vmax,
-      80vmax 80vmax,
-      90vmax 90vmax,
-      110vmax 110vmax,
-      90vmax 90vmax;
-    animation: 10s movement linear infinite;
-    will-change: auto;
-  }
-  &::after {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -2;
-    width: 100%;
-    height: 100%;
-    background: rgba(var(--white-rgb), 1);
-  }
+    position: relative;
+    z-index: 1;
+    min-height: 100svh;
+    min-height: 100vh;
+    font-feature-settings:
+        "clig"off,
+        "liga"off;
+    font-family:
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        "Open Sans",
+        "Helvetica Neue",
+        sans-serif;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    color: rgba(var(--body-text-color), 1);
+    background-color: rgba(var(--body-bg-color), 1);
+    overflow-x: clip;
+    -webkit-text-rendering: optimizeLegibility;
+    -moz-text-rendering: optimizeLegibility;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    // cursor: none;
+
+    // & * {
+    //     cursor: none !important;
+    // }
 }
 
 html.lenis {
-  height: auto;
+    height: auto;
 }
 
 .lenis.lenis-smooth {
-  scroll-behavior: auto !important;
+    scroll-behavior: auto !important;
 }
 
 .lenis.lenis-smooth [data-lenis-prevent] {
-  overscroll-behavior: contain;
+    overscroll-behavior: contain;
 }
 
 .lenis.lenis-stopped {
-  // overflow: hidden;
-  overflow: visible;
+    // overflow: hidden;
+    overflow: visible;
 }
 
 .lenis.lenis-scrolling iframe {
-  pointer-events: none;
+    pointer-events: none;
 }
 
 .mediabox-img.ls-blur-up-is-loading,
 .mediabox-img.lazyload:not([src]) {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .ls-blur-up-img,
 .mediabox-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-position: top center;
-  font-family: "blur-up: auto", "object-fit: cover";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-position: top center;
+    font-family: "blur-up: auto", "object-fit: cover";
 
-  object-fit: cover;
+    object-fit: cover;
 }
 
 .ls-blur-up-img {
-  filter: blur(0.625rem);
-  opacity: 1;
-  transition:
-    opacity 1000ms,
-    filter 1500ms;
+    filter: blur(0.625rem);
+    opacity: 1;
+    transition:
+        opacity 1000ms,
+        filter 1500ms;
 }
 
 .ls-blur-up-img.ls-inview.ls-original-loaded {
-  opacity: 0;
-  filter: blur(0.3275rem);
+    opacity: 0;
+    filter: blur(0.3275rem);
 }
 
 .wrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  min-height: 100dvh;
-  overflow-x: clip;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-height: 100dvh;
+    overflow-x: clip;
 }
 
 .content {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  flex: 1;
-  padding: calc(var(--header-height) + (var(--header-padding-y) * 2)) 0;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    flex: 1;
+    padding: calc(var(--header-height) + (var(--header-padding-y) * 2)) 0;
 }
 
 .section {
-  contain: layout;
+    contain: layout;
 }
 
 .wow {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 #mysprite {
-  display: none;
+    display: none;
 }
