--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,14 +1,20 @@
 .modal {
+    transition: all 0.25s ease-in-out;
+
     &:is(.show) {
+        overflow: auto;
+
         & .modal-dialog {
-            animation: show-in-top 0.6s ease-in-out backwards;
+            animation: show-in-top 0.25s ease-in-out backwards;
         }
     }
+
     &:not(.show) {
         & .modal-dialog {
-            animation: hide-in-bottom 0.6s ease-in-out backwards;
+            animation: hide-in-bottom 0.25s ease-in-out backwards;
         }
     }
+
     &-btn {
         &-close {
             position: absolute;
@@ -16,33 +22,40 @@
             right: 0;
             padding: var(#{$prefix}-modal-content-padding-y);
             transform: translate(0, 0);
-            & > * {
+
+            &>* {
                 padding: calc(var(#{$prefix}-btn-padding-y) - 0.25rem) calc(var(#{$prefix}-btn-padding-x) - 0.25rem);
                 font-size: calc(var(#{$prefix}-btn-font-size) - 25%);
                 line-height: calc(var(#{$prefix}-btn-font-size) - 25%);
             }
         }
     }
+
     & [btn-close-modal] {
         margin: auto 0 auto auto;
     }
+
     &-work {
         & .modal-dialog {
             max-width: calc(100% - 1.5rem);
+
             @media (min-width: 992px) {
                 max-width: calc(48.375rem + 1.5rem);
             }
         }
+
         & .modal-header {
             padding: 0 var(#{$prefix}-modal-header-padding-x) var(#{$prefix}-modal-header-padding-y);
         }
+
         & .modal-image {
             position: relative;
             z-index: 1;
             width: 100%;
             aspect-ratio: 16 / 9;
             overflow: hidden;
-            & > img {
+
+            &>img {
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -51,11 +64,14 @@
                 object-fit: cover;
             }
         }
+
         & .swiper-gallery {
+
             & .swiper-slide,
             & swiper-slide {
                 width: 100% !important;
-                & > img {
+
+                &>img {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
