--- a/src/scss/layouts/_mobile-menu.scss
+++ b/src/scss/layouts/_mobile-menu.scss
@@ -1,7 +1,7 @@
 :root {
     --mobile-menu-zindex: 1040;
-    --mobile-menu-background-color: var(--mobile-menu-accent-light-color);
-    --mobile-menu-accent-color: var(--mobile-menu-accent-dark-color);
+    --mobile-menu-background-color: light-dark(var(--white), var(--dark));
+    --mobile-menu-accent-color: light-dark(var(--grey-900), var(--white));
     --mobile-menu-accent-light-color: var(--black-rgb);
     --mobile-menu-accent-dark-color: var(--white-rgb);
     --mobile-menu-padding-y: 2rem;
@@ -18,17 +18,19 @@
     z-index: var(--mobile-menu-zindex);
     display: block;
     visibility: hidden;
-    background-color: rgba(var(--mobile-menu-background-color), 1);
+    background: var(--mobile-menu-background-color);
     transform: translate(0, 0);
     transition:
-        transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1),
-        visibility 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+        transform 0.25s ease-in-out,
+        visibility 0.25s ease-in-out;
+
     &-show {
         overflow: hidden;
         overflow-y: auto;
         visibility: visible;
         transform: translate(-100%, 0);
     }
+
     &-open {
         position: static;
         pointer-events: fill;
@@ -36,6 +38,7 @@
         // width: 100%;
         // height: 100%;
         overflow: hidden;
+
         & body {
             &::before {
                 content: "";
@@ -53,30 +56,36 @@
             }
         }
     }
+
     &-wrapper {
         display: flex;
         flex-direction: column;
         min-height: 100%;
         padding: 0 var(--mobile-menu-padding-x) var(--mobile-menu-padding-y);
     }
+
     &-content {
         display: block;
         width: 100%;
         flex: 1;
         padding: 1.875rem 0;
     }
+
     &-header {
         padding: var(--header-padding-y) var(--header-padding-x);
+
         &-inner {
             display: block;
             width: 100%;
             margin: auto;
-            & > .row {
+
+            &>.row {
                 --bs-gutter-x: 0.5rem;
                 --bs-gutter-y: 0.5rem;
                 align-items: center;
             }
         }
+
         &-logo {
             position: relative;
             z-index: 1;
@@ -86,23 +95,27 @@
             transform: none;
             transform-origin: center;
             transition: transform 0.4s;
-            & > svg,
-            & > img {
+
+            &>svg,
+            &>img {
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
             }
+
             &:hover {
                 transform: rotate(-90deg) scale3d(1.25, 1.25, 1.25);
             }
         }
     }
+
     &-navigation {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         flex: 1;
+
         & .nav {
             --nav-gutter-x: 0.5rem;
             --nav-gutter-y: 0.5rem;
@@ -113,7 +126,7 @@
             --nav-item-font-style: normal;
             --nav-item-font-weight: 500;
             --nav-item-line-height: 120%;
-            --nav-item-color: rgba(var(--mobile-menu-accent-color), 1);
+            --nav-item-color: var(--mobile-menu-accent-color);
             // &-item {
             //     &:hover {
             //         --nav-item-background-color: rgba(var(--mobile-menu-accent-dark-color), 0.085);
@@ -121,12 +134,14 @@
             // }
         }
     }
+
     &-footer {
         & .row {
             --bs-gutter-x: 0.5rem;
             --bs-gutter-y: 0.5rem;
         }
     }
+
     &-copyrite {
         padding-top: 1.5rem;
     }
