--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -25,7 +25,8 @@
             padding-bottom: 7rem;
 
             @media (min-width: 576px) {
-                max-height: 25rem;
+                max-height: 29.5rem;
+                padding-bottom: 2rem;
             }
 
             @media (min-width: 768px) {
@@ -40,10 +41,6 @@
 
             &>h1 {
                 max-width: 30rem;
-            }
-
-            &>a {
-                margin: auto 0 0 0;
             }
         }
     }
@@ -104,5 +101,6 @@
         justify-content: flex-start;
         flex-wrap: wrap;
         gap: 1.5rem;
+        margin: auto 0 0 0;
     }
 }
