--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -20,8 +20,8 @@
 @import "./layouts/nav";
 @import "./layouts/mobile-menu";
 
-// parts
-@import "./parts/cursor";
+// components
+@import "./parts/card-work";
 
 *,
 *::before,
@@ -41,8 +41,8 @@ body {
     min-height: 100svh;
     min-height: 100vh;
     font-feature-settings:
-        "clig" off,
-        "liga" off;
+        "clig"off,
+        "liga"off;
     font-family:
         system-ui,
         -apple-system,
@@ -150,4 +150,223 @@ html.lenis {
 
 #mysprite {
     display: none;
+}
+
+.section-hero {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: calc(100vh - (var(--header-height) + (var(--header-padding-y) * 2)) * 2);
+    min-height: calc(100svh - (var(--header-height) + (var(--header-padding-y) * 2)) * 2);
+
+    &>.container {
+        margin: auto;
+
+        &>* {
+            position: relative;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+            flex: 1;
+            padding-top: 3rem;
+            padding-bottom: 2rem;
+
+            @media (min-width: 576px) {
+                padding-top: 2rem;
+            }
+
+            &>h1 {
+                max-width: 30rem;
+            }
+        }
+    }
+
+    &-logo {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: -1;
+        width: 6rem;
+        height: 6rem;
+        pointer-events: none;
+        user-select: none;
+        transform: translate(0, 0);
+        filter: drop-shadow(1.25rem 2.25rem 1rem rgba(var(--black-rgb), 0.25));
+
+        @media (min-width: 768px) {
+            width: 12rem;
+            height: 12rem;
+        }
+
+        @media (min-width: 1200px) {
+            width: 16rem;
+            height: 16rem;
+        }
+
+        & .big {
+            animation-name: infiniteRotation;
+            animation-duration: 40s;
+            animation-direction: normal;
+            animation-fill-mode: both;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+            transform: rotate(0deg);
+
+            & * {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
+    &-actions {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        margin: auto 0 0 0;
+
+        @media (min-width: 576px) {
+            padding-top: 1.5rem;
+            flex-wrap: nowrap;
+        }
+
+        @media (min-width: 768px) {
+            padding-top: 3rem;
+        }
+    }
+}
+
+.circle {
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    z-index: -1;
+    display: block;
+    width: 0;
+    height: 0;
+    background-color: var(--danger);
+    border-radius: 50%;
+    transform-origin: top center;
+    transform: translate(-50%, 0);
+}
+
+.section-about {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: calc(100vh - (var(--header-height) + (var(--header-padding-y) * 2)));
+    min-height: calc(100svh - (var(--header-height) + (var(--header-padding-y) * 2)));
+
+    &>* {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+    }
+
+    &-logo {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 12rem;
+        height: 12rem;
+        pointer-events: none;
+        user-select: none;
+        transform: translate(-50%, -50%);
+
+        & .big {
+            animation-name: infiniteRotation;
+            animation-duration: 40s;
+            animation-direction: normal;
+            animation-fill-mode: both;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+            transform: rotate(0deg);
+
+            & * {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
+    &-title {
+        mix-blend-mode: difference;
+        text-align: center;
+    }
+
+    &-inverse {
+        mix-blend-mode: difference;
+    }
+
+    &-tip {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        padding: 1.5rem 0;
+        transform: translateX(-50%);
+        pointer-events: none;
+        user-select: none;
+    }
+}
+
+.section-description {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: calc(100vh - (var(--header-height) + (var(--header-padding-y) * 2)));
+    min-height: calc(100svh - (var(--header-height) + (var(--header-padding-y) * 2)));
+
+    &>* {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+    }
+
+    &-title {
+        mix-blend-mode: difference;
+        text-align: center;
+    }
+
+    &-inverse {
+        mix-blend-mode: difference;
+    }
+
+    &-text {
+        position: relative;
+    }
+}
+
+.section-over {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100%;
+    min-height: 100%;
+
+    &>* {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+    }
+
+    &-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        min-height: 5rem;
+    }
 }
