--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -4,4 +4,95 @@
 
 .card {
     background-color: var(--card-background-color);
+
+    &-hero {
+        position: relative;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        flex: 1;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
+
+        @media (min-width: 576px) {
+            padding-top: 2rem;
+        }
+
+        &>h1 {
+            max-width: 16rem;
+            font-size: 2rem;
+
+            @media (min-width: 768px) {
+                max-width: 30rem;
+                font-size: 3.5rem;
+            }
+        }
+
+        &>h2 {
+            max-width: 16rem;
+
+            @media (min-width: 768px) {
+                max-width: 20rem;
+            }
+        }
+
+        &-logo {
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: -1;
+            width: 6rem;
+            height: 6rem;
+            pointer-events: none;
+            user-select: none;
+            transform: translate(0, 0);
+            filter: drop-shadow(1.25rem 2.25rem 1rem rgba(var(--black-rgb), 0.25));
+
+            @media (min-width: 768px) {
+                width: 12rem;
+                height: 12rem;
+            }
+
+            @media (min-width: 1200px) {
+                width: 16rem;
+                height: 16rem;
+            }
+
+            & .big {
+                animation-name: infiniteRotation;
+                animation-duration: 40s;
+                animation-direction: normal;
+                animation-fill-mode: both;
+                animation-iteration-count: infinite;
+                animation-timing-function: linear;
+                transform: rotate(0deg);
+
+                & * {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+
+        &-actions {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            gap: 1.5rem;
+            margin: auto 0 0 0;
+
+            @media (min-width: 576px) {
+                padding-top: 1.5rem;
+                flex-wrap: nowrap;
+            }
+
+            @media (min-width: 768px) {
+                padding-top: 3rem;
+            }
+        }
+    }
 }
