--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,6 +11,7 @@
 // components
 @import "./components/animation";
 @import "./components/card";
+@import "./components/fonts";
 @import "./components/form";
 @import "./components/modal";
 @import "./components/preloader";
@@ -40,21 +41,22 @@ body {
     z-index: 1;
     min-height: 100svh;
     min-height: 100vh;
-    font-feature-settings:
-        "clig"off,
-        "liga"off;
-    font-family:
-        system-ui,
-        -apple-system,
-        BlinkMacSystemFont,
-        "Segoe UI",
-        Roboto,
-        Oxygen,
-        Ubuntu,
-        Cantarell,
-        "Open Sans",
-        "Helvetica Neue",
-        sans-serif;
+    // font-feature-settings:
+    //     "clig"off,
+    //     "liga"off;
+    // font-family:
+    //     system-ui,
+    //     -apple-system,
+    //     BlinkMacSystemFont,
+    //     "Segoe UI",
+    //     Roboto,
+    //     Oxygen,
+    //     Ubuntu,
+    //     Cantarell,
+    //     "Open Sans",
+    //     "Helvetica Neue",
+    //     sans-serif;
+    font-family: 'SF UI Text';
     font-size: 1rem;
     font-style: normal;
     font-weight: 400;
