--- a/src/scss/components/_animation.scss
+++ b/src/scss/components/_animation.scss
@@ -112,3 +112,26 @@
     transform: translateY(0);
   }
 }
+
+
+@keyframes show-modal {
+  0% {
+    opacity: 0;
+    transform: scale(1.25);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes hide-modal {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.25);
+  }
+}
