--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -5,13 +5,13 @@
         overflow: auto;
 
         & .modal-dialog {
-            animation: show-in-top 0.25s ease-in-out backwards;
+            animation: show-modal 0.25s ease-in-out backwards;
         }
     }
 
     &:not(.show) {
         & .modal-dialog {
-            animation: hide-in-bottom 0.25s ease-in-out backwards;
+            animation: hide-modal 0.25s ease-in-out backwards;
         }
     }
 
@@ -36,12 +36,14 @@
     }
 
     &-work {
+        margin: auto;
+        padding: 0;
         & .modal-dialog {
-            max-width: calc(100% - 1.5rem);
-
-            @media (min-width: 992px) {
-                max-width: 48.375rem;
-            }
+            flex: 1;
+            max-width: 100%;
+            height: 100%;
+            margin: auto;
+            padding: 0;
         }
 
         & .modal-header {
@@ -52,14 +54,14 @@
             position: relative;
             z-index: 1;
             width: 100%;
+            height: 100%;
+            max-height: 480px;
             aspect-ratio: 16 / 9;
+            border-radius: 1.5rem;
+            background-color: var(--dark);
             overflow: hidden;
 
-            &>img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
+            & img {
                 height: 100%;
                 object-fit: cover;
             }
@@ -69,13 +71,35 @@
 
             & .swiper-slide,
             & swiper-slide {
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 width: 100% !important;
 
                 &>img {
-                    width: 100%;
                     height: 100%;
                     object-fit: cover;
                 }
+            }
+        }
+
+        & .modal-content {
+            height: unset;
+            min-height: 100%;
+            border-radius: 0;
+            overflow: auto;
+        }
+
+        & .modal-body {
+            justify-content: center;
+            height: 100%;
+        }
+
+        & .modal-title {
+            padding-right: 2.5rem;
+
+            @media (min-width: 576px) {
+                padding-left: 2.5rem;
             }
         }
     }
